<resources>
    <string name="app_name">Self-Promo App</string>
    <string name="button_send_message">SEND MESSAGE</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_display_name">Display Name</string>
    <string name="text_check_box_include_junior">Include \'Junior\'</string>
    <string name="text_check_box_immediate_start">Immediate Start</string>
    <string name="hint_available_from_date">Available from date</string>
    <string name="button_preview_message">PREVIEW MESSAGE</string>
</resources>